2009-05-01  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-line-number-at-pos): Replaced with
	`line-number-at-pos', and add that to the portability layer.
	(display-warning): Add to the portability layer.
	(slime-display-warning): New.

	* slime.el: Implement a guard against infinite loops during
	fontification. We detect and prevent those. If we detect one, we
	emit a big warning to the user.

	(slime-font-lock-region): New variable.
	(slime-font-lock-region-changed-p): New helper.
	(slime-extend-region-warn-infinite-loop): New helper.
	(slime-compute-region-for-font-lock): Extracted from
	`slime-extend-region-for-font-lock'.
	(slime-extend-region-for-font-lock): Use it; add the guard.

2009-04-30  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-abcl.lisp: Really commit Vodonosov's patch from
	2009-03-09.

2009-04-30  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-backend.lisp ([default] declaration-arglist): Add
	arglist of DECLARATION declaration.

	* swank-openmcl.lisp ([eql 'optimize] declaration-arglist):
	Implement it for CCL.
	(describe-symbol-for-emacs): Add :TYPE.
	(describe-definition): Add :TYPE.

	Adapted from patch by Stas Boukarev.

2009-04-29  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-extend-region-for-font-lock): (nth 0
	<parser-state>) may return negative numbers.

2009-04-29  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el: Fix infinite loop during fontification introduced
	by yesterday's changeset.

	(slime-region-for-tlf-at-point): New. Like
	`slime-region-for-defun-at-point' but tries harder to get the
	toplevel form right.
	(slime-region-for-extended-tlf-at-point): Previously
	`slime-region-for-extended-defun-at-point'.
	(slime-extend-region-for-font-lock): Use it.
	(slime-mark-defun-for-font-lock): Ditto.

2009-04-28  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el: Fix fontification of suppressed (by reader
	conditionals) forms. That is make it reliably and totally work.
